About spacing fix

--- a/css/about.scss
+++ b/css/about.scss
@@ -242,7 +242,7 @@ body{
             padding-left: 4rem;
             padding-top: 2rem;
             .about-caption-container{
-                padding-top: 2rem;
+                padding-top: 0rem;
             }
             h3{
                 line-height: 150%;
